--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <a href="schools.html">My schools</a>
                 </li>
                 <li>
-                    <a href="contact.html">GitHub</a>
+                    <a href="https://github.com/shaharmes/">GitHub</a>
                 </li>
             </ul>
         </aside>
